--- a/build.gradle
+++ b/build.gradle
@@ -55,19 +55,14 @@ dependencies {
 
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-eureka-client', version: '4.1.2'
 
-    // OAuth 2.0
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    testImplementation 'org.springframework.security:spring-security-test'
-    implementation 'com.google.api-client:google-api-client:2.6.0'
-    implementation 'org.springframework.security:spring-security-oauth2-resource-server'
-
     // Iamport
     implementation group: 'com.github.iamport', name: 'iamport-rest-client-java', version: '0.2.23'
     implementation group: 'com.squareup.retrofit2', name: 'adapter-rxjava2', version: '2.11.0'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.11.0'
     implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.12.0'
     implementation group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.11.0'
+
+    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
 }
 
 configurations.configureEach {
