--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,20 @@ java {
         languageVersion = JavaLanguageVersion.of(17)
     }
 }
+jar {
+    enabled = false
+}
+bootJar{
+    enabled = true
+}
 
 repositories {
     mavenCentral()
     maven { url 'https://jitpack.io' }
 }
-
+ext {
+    set('springCloudVersion', "2023.0.2")
+}
 dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -35,9 +43,9 @@ dependencies {
 
     runtimeOnly 'com.h2database:h2'
     implementation 'org.modelmapper:modelmapper:3.2.0'
-    implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
-    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
     annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
     compileOnly group: 'jakarta.servlet', name: 'jakarta.servlet-api', version: '6.1.0'
@@ -48,7 +56,15 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
 
+    // Spring Security
+    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
+
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-eureka-client', version: '4.1.2'
+
+    // config
+    implementation 'org.springframework.cloud:spring-cloud-starter-config'
 
     // Iamport
     implementation group: 'com.github.iamport', name: 'iamport-rest-client-java', version: '0.2.23'
@@ -58,7 +74,11 @@ dependencies {
     implementation group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.11.0'
 
     implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
-
+}
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
 
 configurations.configureEach {
@@ -67,4 +87,8 @@ configurations.configureEach {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+clean {
+    delete file('src/main/generated')
 }
