--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,13 @@ dependencies {
 
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-eureka-client', version: '4.1.2'
 
+    // OAuth 2.0
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    testImplementation 'org.springframework.security:spring-security-test'
+    implementation 'com.google.api-client:google-api-client:2.6.0'
+    implementation 'org.springframework.security:spring-security-oauth2-resource-server'
+
     // Iamport
     implementation group: 'com.github.iamport', name: 'iamport-rest-client-java', version: '0.2.23'
     implementation group: 'com.squareup.retrofit2', name: 'adapter-rxjava2', version: '2.11.0'
